Lucene Change Log
$Id$

======================= Trunk (not yet released) =======================
Changes in backwards compatibility policy

Changes in runtime behavior

API Changes

* LUCENE-2076: Rename FSDirectory.getFile -> getDirectory.  (George
  Aroush via Mike McCandless)

* LUCENE-1260: Change norm encode (float->byte) and decode
  (byte->float) to be instance methods not static methods.  This way a
  custom Similarity can alter how norms are encoded, though they must
  still be encoded as a single byte (Johan Kindgren via Mike
  McCandless)

Bug fixes

* LUCENE-2092: BooleanQuery was ignoring disableCoord in its hashCode
  and equals methods, cause bad things to happen when caching
  BooleanQueries.  (Chris Hostetter, Mike McCandless)

* LUCENE-2095: Fixes: when two threads call IndexWriter.commit() at
  the same time, it's possible for commit to return control back to
  one of the threads before all changes are actually committed.
  (Sanne Grinovero via Mike McCandless)

New features

* LUCENE-2069: Added Unicode 4 support to CharArraySet. Due to the switch
  to Java 5, supplementary characters are now lowercased correctly if the
  set is created as case insensitive.
  CharArraySet now requires a Version argument to preserve 
  backwards compatibility. If Version < 3.1 is passed to the constructor, 
  CharArraySet yields the old behavior. (Simon Willnauer)
  
* LUCENE-2069: Added Unicode 4 support to LowerCaseFilter. Due to the switch
  to Java 5, supplementary characters are now lowercased correctly.
  LowerCaseFilter now requires a Version argument to preserve 
  backwards compatibility. If Version < 3.1 is passed to the constructor, 
  LowerCaseFilter yields the old behavior. (Simon Willnauer, Robert Muir)  

Optimizations

* LUCENE-2086: When resolving deleted terms, do so in term sort order
  for better performance. (Bogdan Ghidireac via Mike McCandless)

* LUCENE-2075: Terms dict cache is now shared across threads instead